Remove outdated roadmap and TODO files; update package.json scripts; refresh benchmark results and reports; delete update-readme script.

--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ test-data/*.txt
 
 # Benchmark results (keep structure but ignore timestamped files)
 results/benchmark-*.json
-results/*-backup-*.md
+results/readme-backup-*.md
 
 # Logs
 logs
