feat: Add support for uzip library in benchmark tests and update results

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
-    "yauzl": "^3.0.0",
-    "yazl": "^2.5.1",
-    "node-stream-zip": "^1.15.0",
+    "fflate": "^0.8.1",
     "jszip": "^3.10.1",
-    "fflate": "^0.8.1"
+    "node-stream-zip": "^1.15.0",
+    "uzip": "^0.20201231.0",
+    "yauzl": "^3.0.0",
+    "yazl": "^2.5.1"
   },
   "devDependencies": {
     "fs-extra": "^11.2.0"
